Fixed overflowing input on smaller screens

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,14 +5,13 @@ section {
 .header-title {
   font-size: 2em;
   font-weight: bold;
-  text-align: center;
   margin: 20px 0;
 }
 
 input {
   margin: 0 30px;
   border: 2px solid #fff;
-  width: 350px;
+  width: 80%;
   padding: 8px 12px;
   font-size: 18px;
   border-radius: 10px;
